pom.xml: suppress JNA warnings from Jenkins core whenever maven runs
Signed-off-by: Evgeny Klimov <klimov@provys.com>